--- a/hw01.md
+++ b/hw01.md
@@ -1,13 +1,13 @@
-我的第一次作业
-1)Computer
-A computer is a device that can be instructed to carry out sequences of arithmetic or logical operations automatically via computer programming.
-2)Computer science
-Computer science is the study of the theory, experimentation, and engineering that form the basis for the design and use of computers.
-3)Software
-Computer software, or simply software, is a generic term that refers to a collection of data or computer instructions that tell the computer how to work, in contrast to the physical hardware from which the system is built, that actually performs the work.
-4)Software engineering
-Software engineering is the application of engineering to the development of software in a systematic method.
-5)Alan Turing
-Alan Mathison Turing OBE FRS (/ˈtjʊərɪŋ/; 23 June 1912 – 7 June 1954) was an English computer scientist, mathematician, logician, cryptanalyst, philosopher, and theoretical biologist.
-6)Moore’s law
+我的第一次作业<br/>
+1)Computer<br/>
+A computer is a device that can be instructed to carry out sequences of arithmetic or logical operations automatically via computer programming.<br/>
+2)Computer science<br/>
+Computer science is the study of the theory, experimentation, and engineering that form the basis for the design and use of computers.<br/>
+3)Software<br/>
+Computer software, or simply software, is a generic term that refers to a collection of data or computer instructions that tell the computer how to work, in contrast to the physical hardware from which the system is built, that actually performs the work.<br/>
+4)Software engineering<br/>
+Software engineering is the application of engineering to the development of software in a systematic method.<br/>
+5)Alan Turing<br/>
+Alan Mathison Turing OBE FRS (/ˈtjʊərɪŋ/; 23 June 1912 – 7 June 1954) was an English computer scientist, mathematician, logician, cryptanalyst, philosopher, and theoretical biologist.<br/>
+6)Moore’s law<br/>
 Moore's law is the observation that the number of transistors in a dense integrated circuit doubles about every two years.
