--- a/hw02.md
+++ b/hw02.md
@@ -1,6 +1,6 @@
-## homework02
+# homework02
 
-进制转换
+## 进制转换
 
 ①  1分12秒=(   72000   )毫秒
 
@@ -15,3 +15,17 @@
 ⑥  (678)<sub>10</sub>=(   1010100110    )<sub>2</sub>=(    1246    )<sub>8</sub>
 
 ⑦  (111)<sub>2</sub>+(101)<sub>2</sub>=(   1100   )<sub>2</sub>
+
+## 名词解释
+
+### 1) Information<br/>
+Information is any entity or form that provides the answer to a question of some kind or resolves uncertainty. It is thus related to data and knowledge, as data represents values attributed to parameters, and knowledge signifies understanding of real things or abstract concepts. As it regards data, the information's existence is not necessarily coupled to an observer (it exists beyond an event horizon, for example), while in the case of knowledge, the information requires a cognitive observer.
+
+### 2) Positional notation<br/>
+Positional notation or place-value notation is a method of representing or encoding numbers. Positional notation is distinguished from other notations (such as Roman numerals) for its use of the same symbol for the different orders of magnitude (for example, the "ones place", "tens place", "hundreds place"). This greatly simplified arithmetic, leading to the rapid spread of the notation across the world.
+
+### 3) Algorithm<br/>
+In mathematics and computer science, an algorithm is an unambiguous specification of how to solve a class of problems. Algorithms can perform calculation, data processing and automated reasoning tasks.
+
+### 4) Software bug<br/>
+A software bug is an error, flaw, failure or fault in a computer program or system that causes it to produce an incorrect or unexpected result, or to behave in unintended ways. The process of fixing bugs is termed "debugging" and often uses formal techniques or tools to pinpoint bugs, and since the 1950s, some computer systems have been designed to also deter, detect or auto-correct various computer bugs during operations.
