--- a/hw02.md
+++ b/hw02.md
@@ -29,3 +29,10 @@ In mathematics and computer science, an algorithm is an unambiguous specificatio
 
 ### 4) Software bug<br/>
 A software bug is an error, flaw, failure or fault in a computer program or system that causes it to produce an incorrect or unexpected result, or to behave in unintended ways. The process of fixing bugs is termed "debugging" and often uses formal techniques or tools to pinpoint bugs, and since the 1950s, some computer systems have been designed to also deter, detect or auto-correct various computer bugs during operations.
+
+## 单词翻译
+
+### 十进制&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Decimal
+### 二进制&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Binary
+### 八进制&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Octal
+### 十六进制&nbsp;&nbsp;&nbsp;Hexadecimal
