--- a/hw03.md
+++ b/hw03.md
@@ -1,6 +1,6 @@
-#homework03
+# homework03
 
-##Part1
+## Part1
 
 1)x=0100 0011&nbsp;&nbsp;y=1111 1001&nbsp;&nbsp;z=1011 0110<br/>
 2)x overflow<br/>
@@ -10,3 +10,18 @@
 6)x=10111.0<br/>
 7)x=0.0111001&nbsp;出现精度误差
 
+## Part2
+
+### 名词解释
+
+#### 1)	Method of complements<br/>
+In mathematics and computing, the method of complements is a technique used to subtract one number from another using only addition of positive numbers. This method was commonly used in mechanical calculators and is still used in modern computers.
+
+#### 2)	Byte<br/>
+The byte is a unit of digital information that most commonly consists of eight bits, representing a binary number. Historically, the byte was the number of bits used to encode a single character of text in a computer and for this reason it is the smallest addressable unit of memory in many computer architectures.
+
+#### 3)	Integer (computer science)<br/>
+In computer science, an integer is a datum of integral data type, a data type that represents some range of mathematical integers. Integral data types may be of different sizes and may or may not be allowed to contain negative values. Integers are commonly represented in a computer as a group of binary digits (bits). The size of the grouping varies so the set of integer sizes available varies between different types of computers. Computer hardware, including virtual machines, nearly always provide a way to represent a processor register or memory address as an integer.
+
+#### 4)	Floating point<br/>
+In computing, floating-point arithmetic (FP) is arithmetic using formulaic representation of real numbers as an approximation so as to support a trade-off between range and precision.
