--- a/hw03.md
+++ b/hw03.md
@@ -25,3 +25,17 @@ In computer science, an integer is a datum of integral data type, a data type th
 
 #### 4)	Floating point<br/>
 In computing, floating-point arithmetic (FP) is arithmetic using formulaic representation of real numbers as an approximation so as to support a trade-off between range and precision.
+
+### Method of complements
+
+1)&nbsp;证明：
+
+
+
+
+
+2)&nbsp;x=-017转换为十进制为-15，原码为1000 1111，其补码为1111 0001，再转换为八进制为351，故用八进制描述变量x为351。
+
+### Two‘s complement
+
+1)&nbsp;x=-0x1f转换为十进制为-31，原码为1001 1111，其补码为1110 0001，再转换为十六进制为0x61
