--- a/hw03.md
+++ b/hw03.md
@@ -2,13 +2,22 @@
 
 ## Part1
 
-1)x=0100 0011&nbsp;&nbsp;y=1111 1001&nbsp;&nbsp;z=1011 0110<br/>
-2)x overflow<br/>
-3)x=1101 0011<br/>
-4)x=0111 1111&nbsp;&nbsp;y=1111 1001&nbsp;&nbsp;z overflow<br/>
-5)x=1.001<br/>
-6)x=10111.0<br/>
-7)x=0.0111001&nbsp;出现精度误差
+Write out variables x,y and z in binary code<br/>
+1)int8_t&nbsp;x=67;int8_t&nbsp;y=-7;int8_t&nbsp;z=y-x;<br/>
+x=0100 0011&nbsp;&nbsp;y=1111 1001&nbsp;&nbsp;z=1011 0110<br/>
+2)int8_t&nbsp;x=0xd3;<br/>
+x=overflow<br/>
+3)uint8_t=0xd3;<br/>
+x=1101 0011<br/>
+4)int8_t&nbsp;x=127;int8_t&nbsp;y=-7;int8_t&nbsp;z=y-x;<br/>
+x=0111 1111&nbsp;&nbsp;y=1111 1001&nbsp;&nbsp;z=overflow<br/>
+5)float&nbsp;x=1.125;<br/>
+x=0&nbsp;01111111&nbsp;0010 0000 0000 0000 0000 000<br/>
+6)float&nbsp;x=23.0;<br/>
+x=0&nbsp;10000011&nbsp;0111 0000 0000 0000 0000 000<br/>
+7)float&nbsp;x=0.45;<br/>
+x=0&nbsp;01111101&nbsp;1100 1100 1100 1100 1100 110&nbsp;&nbsp;出现精度误差
+
 
 ## Part2
 
