--- a/hw03.md
+++ b/hw03.md
@@ -12,11 +12,11 @@ x=1101 0011<br/>
 4)int8_t&nbsp;x=127;int8_t&nbsp;y=-7;int8_t&nbsp;z=y-x;<br/>
 x=0111 1111&nbsp;&nbsp;y=1111 1001&nbsp;&nbsp;z=overflow<br/>
 5)float&nbsp;x=1.125;<br/>
-x=0&nbsp;01111111&nbsp;0010 0000 0000 0000 0000 000<br/>
+x=0 01111111 0010 0000 0000 0000 0000 000<br/>
 6)float&nbsp;x=23.0;<br/>
-x=0&nbsp;10000011&nbsp;0111 0000 0000 0000 0000 000<br/>
+x=0 10000011 0111 0000 0000 0000 0000 000<br/>
 7)float&nbsp;x=0.45;<br/>
-x=0&nbsp;01111101&nbsp;1100 1100 1100 1100 1100 110&nbsp;&nbsp;出现精度误差
+x=0 01111101 1100 1100 1100 1100 1100 110&nbsp;&nbsp;出现精度误差
 
 
 ## Part2
@@ -37,14 +37,22 @@ In computing, floating-point arithmetic (FP) is arithmetic using formulaic repre
 
 ### Method of complements
 
-1)&nbsp;证明：
+1)&nbsp;请证明：二进制的负数（two‘s complement of X）等于 X 的 ones’complement ＋ 1（即，X每位求反加1)<br/>
+证明：记X的ones’complement为f(X),X的负数为g(X)，设X为n位数。<br/>
+因为X的ones’complement为X的每位求反，所以X+f(X)=1111....1111(n个1)=2<sup>n</sup>-1 ① <br/>
+由定义得X+g(X)=1 0000....0000(n个0)=2<sup>n</sup> ②<br/>
+由①②两式可得g(X)=f(X)+1;证毕
 
-
-
-
-
-2)&nbsp;x=-017转换为十进制为-15，原码为1000 1111，其补码为1111 0001，再转换为八进制为351，故用八进制描述变量x为351。
+2)&nbsp;Int8_t x = - 017; 请用8进制描述变量 x。在c中017即(017)<sub>8</sub><br/>
+x=0361
+x=-017转换为十进制为-15，原码为1000 1111，其补码为1111 0001，再转换为八进制为361，故用八进制描述变量x为361。
 
 ### Two‘s complement
 
-1)&nbsp;x=-0x1f转换为十进制为-31，原码为1001 1111，其补码为1110 0001，再转换为十六进制为0x61
+1)&nbsp;C程序：int8_t x = -0x1f; int y = x; 请用16进制描述变量 x 和 y，并说明 int
+y = x 的计算过程。<br/>
+x=0xe1;   y=0xffffffe1<br/>
+x=-0x1f转换为十进制为-31,其32位表示的原码为1000 0000 0000 0000 0000 0000 0001 1111，其补码为1111 1111 1111 1111 1111 1111 1110 0001,转换为十六进制为0xffffffe1,故y=0xffffffe1
+
+2)请用数学证明，为什么可以这么计算。<br/>
+证明：因为x的8位表示原码为1001 1111，而int占4个字节32位，为不影响x的大小，使x的符号位（即第一位）不变，在中间加入0补齐32位变为1000 0000 0000 0000 0000 0000 0001 1111，再取其补码。
