--- a/hw03.md
+++ b/hw03.md
@@ -54,10 +54,6 @@ y = x 的计算过程。<br/>
 x=0xe1;   y=0xffffffe1<br/>
 x=-0x1f转换为十进制为-31,原码为1001 1111，补码为1110 0001，要将其扩展为32位，则在左侧用1补至32位，即1111 1111 1111 1111 1111 1111 1110 0001，再转换位16进制，即ffffffe1，故y=x=0xffffffe1。
 
-
-
-为不影响x的大小，使x的符号位（即第一位）不变，在中间加入0补齐32位变为1000 0000 0000 0000 0000 0000 0001 1111，再取其补码为1111 1111 1111 1111 1111 1111 1110 0001,转换为十六进制为0xffffffe1,故y=0xffffffe1
-
 2)请用数学证明，为什么可以这么计算。<br/>
 证明：假设由n+1位扩展至m+1位，记x<sub>i</sub>取反为y<sub>i</sub>，x<sub>i</sub>,y<sub>i</sub>为0或1。<br/>
 若一数为正数，其二进制数扩展只需在左边补0，而不会影响其大小。<br/>
@@ -67,5 +63,6 @@ a的n+1位原码为0x<sub>1</sub>x<sub>2</sub>......x<sub>n</sub>，为不影响
 由此可以看出A的m+1位补码即为其n+1位补码的左侧用(m-n)个1补齐，所以二进制数在扩展位数时，只需在左侧用符号位（即最左位）数字补齐即可。
 
 
-NaN 是什么？<br/>
+### NaN 是什么？
+
 NaN即"Not a number"，在浮点运算中，表示未定义或不可表示值的数据类型，作为某些“无效”操作的结果返回。如0/0。
