--- a/hw04.md
+++ b/hw04.md
@@ -4,4 +4,24 @@
 
 ### 1）ASCII
 
+ASCII abbreviated from American Standard Code for Information Interchange, is a character encoding standard for electronic communication. ASCII codes represent text in computers, telecommunications equipment, and other devices. Most modern character-encoding schemes are based on ASCII, although they support many additional characters.
+
 ### 2）color
+
+## 简单回答以下问题：
+
+1) 写出字符“A”,“中”的 ASCII 码、Unicode 码、utf-8 编码。
+
+|   | ASCII | Unicode | utf-8   |
+|:--------------:|:--------------:|:--------------:|:--------------:|
+| A | 65 | 65 |——
+|中|   ——   |  4E2D |D6D0 4E2D E4 B8 AD| 
+
+2）黄色(yellow)的RGB编码是(255,255,0)
+
+3）从网上下载一个 BMP 格式图像,用图片编辑工具另存在 jpg、 png、tiff 格式。问三种格式中,哪种格式显示质量好?相对于BMP 格式,压缩率各是多少?
+
+答：jpg、tiff格式显示质量好。相对于BMP 格式,jpg的压缩率是，png压缩率是，tiff压缩率是。
+
+4） Winrar压缩文件是lossless, or lossy 方法？<br/>
+lossless
