--- a/hw03.md
+++ b/hw03.md
@@ -6,11 +6,11 @@ Write out variables x,y and z in binary code<br/>
 1)int8_t&nbsp;x=67;int8_t&nbsp;y=-7;int8_t&nbsp;z=y-x;<br/>
 x=0100 0011&nbsp;&nbsp;y=1111 1001&nbsp;&nbsp;z=1011 0110<br/>
 2)int8_t&nbsp;x=0xd3;<br/>
-x=overflow<br/>
+x=0 1101 0011(overflow)<br/>
 3)uint8_t=0xd3;<br/>
 x=1101 0011<br/>
 4)int8_t&nbsp;x=127;int8_t&nbsp;y=-7;int8_t&nbsp;z=y-x;<br/>
-x=0111 1111&nbsp;&nbsp;y=1111 1001&nbsp;&nbsp;z=overflow<br/>
+x=0111 1111&nbsp;&nbsp;y=1111 1001&nbsp;&nbsp;z=1 0111 1010(overflow)<br/>
 5)float&nbsp;x=1.125;<br/>
 x=0 01111111 0010 0000 0000 0000 0000 000<br/>
 6)float&nbsp;x=23.0;<br/>
@@ -38,10 +38,15 @@ In computing, floating-point arithmetic (FP) is arithmetic using formulaic repre
 ### Method of complements
 
 1)&nbsp;请证明：二进制的负数（two‘s complement of X）等于 X 的 ones’complement ＋ 1（即，X每位求反加1)<br/>
-证明：记X的ones’complement为f(X),X的负数为g(X)，设X为n位数。<br/>
-因为X的ones’complement为X的每位求反，所以X+f(X)=1111....1111(n个1)=2<sup>n</sup>-1 ① <br/>
-由定义得X+g(X)=1 0000....0000(n个0)=2<sup>n</sup> ②<br/>
-由①②两式可得g(X)=f(X)+1;证毕
+证明：<br/>
+设一二进制数X=X<sub>1</sub>X<sub>2</sub>......X<sub>n</sub><br/>
+由负数表示法可得：<br/>
+Negative(X)=2<sup>k</sup>-I<br/>
+Negative(X)=(2<sup>k</sup>-1)-I+1<br/>
+Negative(X)=(2<sup>k-1</sup>+2<sup>k-2</sup>+......+2+1)-X+1<br/>
+2<sup>k-1</sup>+2<sup>k-2</sup>+......+2+1即为111......111(n个1)<br/>
+故(2<sup>k-1</sup>+2<sup>k-2</sup>+......+2+1)-X即为X的每位求反<br/>
+所以二进制的负数等于其每位求反加1
 
 2)&nbsp;Int8_t x = - 017; 请用8进制描述变量 x。在c中017即(017)<sub>8</sub><br/>
 x=0361
