--- a/hw04.md
+++ b/hw04.md
@@ -8,6 +8,8 @@ ASCII abbreviated from American Standard Code for Information Interchange, is a 
 
 ### 2）color
 
+颜色或色彩是通过眼、脑和我们的生活经验所产生的一种对光的视觉效应。人对颜色的感觉不仅仅由光的物理性质所决定，还包含心理等许多因素，比如人类对颜色的感觉往往受到周围颜色的影响。有时人们也将物质产生不同颜色的物理特性直接称为颜色。
+
 ## 简单回答以下问题：
 
 1) 写出字符“A”,“中”的 ASCII 码、Unicode 码、utf-8 编码。
