--- a/hw03.md
+++ b/hw03.md
@@ -44,7 +44,7 @@ In computing, floating-point arithmetic (FP) is arithmetic using formulaic repre
 Negative(X)=2<sup>k</sup>-I<br/>
 Negative(X)=(2<sup>k</sup>-1)-I+1<br/>
 Negative(X)=(2<sup>k-1</sup>+2<sup>k-2</sup>+......+2+1)-X+1<br/>
-2<sup>k-1</sup>+2<sup>k-2</sup>+......+2+1即为111......111(n个1)<br/>
+2<sup>k-1</sup>+2<sup>k-2</sup>+......+2+1转换为二进制即为111......111(n个1)<br/>
 故(2<sup>k-1</sup>+2<sup>k-2</sup>+......+2+1)-X即为X的每位求反<br/>
 所以二进制的负数等于其每位求反加1
 
@@ -60,7 +60,23 @@ x=0xe1;   y=0xffffffe1<br/>
 x=-0x1f转换为十进制为-31,原码为1001 1111，补码为1110 0001，要将其扩展为32位，则在左侧用1补至32位，即1111 1111 1111 1111 1111 1111 1110 0001，再转换位16进制，即ffffffe1，故y=x=0xffffffe1。
 
 2)请用数学证明，为什么可以这么计算。<br/>
-证明：假设由n+1位扩展至m+1位，记x<sub>i</sub>取反为y<sub>i</sub>，x<sub>i</sub>,y<sub>i</sub>为0或1。<br/>
+证明：设I为一n位的二进制正数，要求扩展到m位，（m>n） d<sub>i</sub>为0或1。<br/>
+对于正数扩展：<br/>
+由位置表示法：I=\sum_0^n\d<sub>i</sub>*2<sup>i</sup>
+
+$$\sum_1^n$ , $\sum_{i=0}^\infty i^2$
+
+$$\sum_{i=1}^n a_i=0$$
+
+
+
+
+
+
+
+
+
+假设由n+1位扩展至m+1位，记x<sub>i</sub>取反为y<sub>i</sub>，x<sub>i</sub>,y<sub>i</sub>为0或1。<br/>
 若一数为正数，其二进制数扩展只需在左边补0，而不会影响其大小。<br/>
 对于一负数A，记其绝对值为a，A的n+1位原码为1 x<sub>1</sub>x<sub>2</sub>......x<sub>n</sub>，转为补码为1 y<sub>1</sub>y<sub>2</sub>......y<sub>n-1</sub>x<sub>n</sub><br/>
 a的n+1位原码为0x<sub>1</sub>x<sub>2</sub>......x<sub>n</sub>，为不影响其大小，在扩展至m位时在左侧补齐0，为0 000......000(m-n个0) x<sub>1</sub>x<sub>2</sub>......x<sub>n</sub><br/>
