--- a/hw03.md
+++ b/hw03.md
@@ -62,17 +62,15 @@ x=-0x1f转换为十进制为-31,原码为1001 1111，补码为1110 0001，要将
 2)请用数学证明，为什么可以这么计算。<br/>
 证明：设I为一n位的二进制正数，要求扩展到m位，（m>n） d<sub>i</sub>为0或1。<br/>
 对于正数扩展：<br/>
-由位置表示法：I=\sum_0^n\d<sub>i</sub>*2<sup>i</sup>
-
-$$\sum_1^n$ , $\sum_{i=0}^\infty i^2$
-
-$$\sum_{i=1}^n a_i=0$$
-
-
-
-
-
-
+由位置表示法：<br/>
+$$I=\sum_{i=1}^n d_i*2^i$$
+$$=0+\sum_{i=1}^n d_i*2^i$$
+$$=\sum_{i=k+1}^m 0*2^i+\sum_{i=1}^n d_i*2^i$$
+可得当I为正数，在左边用0补齐即可。<br/>
+对于负数扩展：<br/>
+$$-I=-\sum_{i=1}^n d_i*2^i$$
+$$=\sum_{i=1}^n {1-d_i}*2^i+1$$
+$$=\sum_{i=1}^n 1*2^i-\sum_{i=1}^n d_i*2^i+1$$
 
 
 
