--- a/hw03.md
+++ b/hw03.md
@@ -63,24 +63,19 @@ x=-0x1f转换为十进制为-31,原码为1001 1111，补码为1110 0001，要将
 证明：设I为一n位的二进制正数，要求扩展到m位，（m>n） d<sub>i</sub>为0或1。<br/>
 对于正数扩展：<br/>
 由位置表示法：<br/>
-$$I=\sum_{i=1}^n d_i*2^i$$
-$$=0+\sum_{i=1}^n d_i*2^i$$
-$$=\sum_{i=k+1}^m 0*2^i+\sum_{i=1}^n d_i*2^i$$
+$$I=\sum_{i=1}^n d_i*2^i$$<br/>
+$$=0+\sum_{i=1}^n d_i*2^i$$<br/>
+$$=\sum_{i=k+1}^m 0*2^i+\sum_{i=1}^n d_i*2^i$$<br/>
+$$=\sum_{i=k+1}^m 0*2^i+I$$<br/>
 可得当I为正数，在左边用0补齐即可。<br/>
 对于负数扩展：<br/>
-$$-I=-\sum_{i=1}^n d_i*2^i$$
-$$=\sum_{i=1}^n {1-d_i}*2^i+1$$
-$$=\sum_{i=1}^n 1*2^i-\sum_{i=1}^n d_i*2^i+1$$
-
-
-
-假设由n+1位扩展至m+1位，记x<sub>i</sub>取反为y<sub>i</sub>，x<sub>i</sub>,y<sub>i</sub>为0或1。<br/>
-若一数为正数，其二进制数扩展只需在左边补0，而不会影响其大小。<br/>
-对于一负数A，记其绝对值为a，A的n+1位原码为1 x<sub>1</sub>x<sub>2</sub>......x<sub>n</sub>，转为补码为1 y<sub>1</sub>y<sub>2</sub>......y<sub>n-1</sub>x<sub>n</sub><br/>
-a的n+1位原码为0x<sub>1</sub>x<sub>2</sub>......x<sub>n</sub>，为不影响其大小，在扩展至m位时在左侧补齐0，为0 000......000(m-n个0) x<sub>1</sub>x<sub>2</sub>......x<sub>n</sub><br/>
-由于a的负数（即A）=a的ones’complement（a的每位取反）+1，可得A的m+1位补码为1 111......111(m-n个1) y<sub>1</sub>y<sub>2</sub>......y<sub>n-1</sub>x<sub>n</sub>。<br/>
-由此可以看出A的m+1位补码即为其n+1位补码的左侧用(m-n)个1补齐，所以二进制数在扩展位数时，只需在左侧用符号位（即最左位）数字补齐即可。
-
+$$-I=-\sum_{i=1}^n d_i*2^i$$<br/>
+$$=-(\sum_{i=k+1}^m 0*2^i+\sum_{i=1}^n d_i*2^i)$$<br/>
+由于二进制的负数等于其每位求反加1,可得<br/>
+上式$$=\sum_{i=k+1}^m (1-0)*2^i+\sum_{i=1}^n (1-d_i)*2^i+1$$<br/>
+$$=\sum_{i=k+1}^m 1*2^i+(-I)$$<br/>
+可得当I为负数，在左边用1补齐即可。<br/>
+所以二进制数在扩展位数时，只需在左侧用符号位（即最左位）数字补齐即可。
 
 ### NaN 是什么？
 
