--- a/hw04.md
+++ b/hw04.md
@@ -23,7 +23,7 @@ ASCII abbreviated from American Standard Code for Information Interchange, is a 
 
 3）从网上下载一个 BMP 格式图像,用图片编辑工具另存在 jpg、 png、tiff 格式。问三种格式中,哪种格式显示质量好?相对于BMP 格式,压缩率各是多少?
 
-答：jpg、tiff格式显示质量好。相对于BMP 格式,jpg的压缩率是16:1，png压缩率是2.7:1，tiff压缩率是2:1。
+答：tiff格式显示质量好。相对于BMP 格式,jpg的压缩率是20:1，png压缩率是3:1，tiff压缩率是2.3:1。
 
 4） Winrar压缩文件是lossless, or lossy 方法？<br/>
 lossless
