--- a/hw05.md
+++ b/hw05.md
@@ -1,9 +1,86 @@
 # homework05
 
-## Part1
+## Part 1
 
+1) Give the three representations of an AND gate and say in your
+words what AND means.
+
+AND gate
 |Boolean Expression（布尔表达式）|Logic diagram（逻辑图）|Truth table（真值表）
 |:----------:|:-----------------:|:---------------------
 |$$X = A • B$$|![](images/AND.png)|![](images/andtt.png)
-AND:
+AND:与门相当于串联，“与”是同时的意思，即A和B两个条件同时满足（即都为1）时，才为正确（即输出1），否则为错误（即输出0）。与门是用于实现“乘”运算的电路。
 
+2) Give the three representations of an XOR gate and say in your
+words what XOR means.
+
+ XOR gate
+ Boolean Expression（布尔表达式）|Logic diagram（逻辑图）|Truth table（真值表）
+|:----------:|:-----------------:|:---------------------
+|$$X = A ⊕ B$$|![](images/XOR.png)|![](images/xortt.png)
+XOR:异或相当于不进位的二进制加法，又叫半加运算。当A和B相同时（即都为0或都为1）输出 0，当A和B不同时（即为0和1）输出1。
+
+3) Draw a circuit diagram corresponding to the following Boolean
+expression: (A + B)(B + C)
+
+
+4) Show the behavior of the following circuit with a truth table:<br/>
+![](images/hw05p1.png)
+
+A|B|X
+|:----:|:-----:|:-----
+|0|0|1
+|0|1|1
+|1|0|0
+|1|1|1
+
+5) What is circuit equivalence? Use truth table to prove the
+following formula.<br/>
+(AB)' = A'+ B'<br/>
+circuit equivalence（电路等价）意思是两个电路的效果相同，即两个电路输入相同时输出也相同。
+
+Left:
+A|B|X
+|:----:|:-----:|:-----
+|0|0|1
+|0|1|1
+|1|0|1
+|1|1|0
+
+Right:
+A|B|X
+|:----:|:-----:|:-----
+|0|0|1
+|0|1|1
+|1|0|1
+|1|1|0
+由于等式左右电路的真值表相同，故两个电路等价，等式成立。
+
+## Part 2
+6) There are eight 1bit full adder integrated circuits. Combine them to 8bit adder
+circuit using the following box diagram.<br/>
+![](images/hw05p2.png)<br/>
+
+
+7) Logical binary operations can be used to modify bit pattern. Such as
+(X<sub>8</sub>X<sub>7</sub>X<sub>6</sub>X<sub>5</sub>X<sub>4</sub>X<sub>3</sub>X<sub>2</sub>X<sub>1</sub>
+)<sub>2</sub> and (00001111)<sub>2</sub>= (0000X<sub>4</sub>X<sub>3</sub>X<sub>2</sub>X<sub>1</sub>
+)<sub>2</sub>
+We called that (00001111)<sub>2</sub>
+is a mask which only makes low 4 bits to work.<br/>
+Fill the follow expression
+
+(1) <br/>(X<sub>8</sub>X<sub>7</sub>X<sub>6</sub>X<sub>5</sub>X<sub>4</sub>X<sub>3</sub>X<sub>2</sub>X<sub>1</sub>
+)<sub>2</sub> or (00001111)<sub>2</sub> = ( )<sub>2</sub>
+
+(2) <br/>(X<sub>8</sub>X<sub>7</sub>X<sub>6</sub>X<sub>5</sub>X<sub>4</sub>X<sub>3</sub>X<sub>2</sub>X<sub>1</sub>
+)<sub>2</sub>
+xor (00001111)<sub>2</sub> = ( )<sub>2</sub>
+
+(3)<br/>
+ ((X<sub>8</sub>X<sub>7</sub>X<sub>6</sub>X<sub>5</sub>X<sub>4</sub>X<sub>3</sub>X<sub>2</sub>X<sub>1</sub>
+)<sub>2</sub> and (11110000)<sub>2</sub> )
+or (not X<sub>8</sub>X<sub>7</sub>X<sub>6</sub>X<sub>5</sub>X<sub>4</sub>X<sub>3</sub>X<sub>2</sub>X<sub>1</sub>
+)<sub>2</sub>
+and (00001111)<sub>2</sub>
+) = ( )<sub>2</sub>
