--- a/hw05.md
+++ b/hw05.md
@@ -57,6 +57,7 @@ A|B|X
 由于等式左右电路的真值表相同，故两个电路等价，等式成立。
 
 ## Part 2
+
 6) There are eight 1bit full adder integrated circuits. Combine them to 8bit adder
 circuit using the following box diagram.<br/>
 ![](images/hw05p2.png)<br/>
@@ -71,11 +72,11 @@ is a mask which only makes low 4 bits to work.<br/>
 Fill the follow expression
 
 (1) <br/>(X<sub>8</sub>X<sub>7</sub>X<sub>6</sub>X<sub>5</sub>X<sub>4</sub>X<sub>3</sub>X<sub>2</sub>X<sub>1</sub>
-)<sub>2</sub> or (00001111)<sub>2</sub> = ( )<sub>2</sub>
+)<sub>2</sub> or (00001111)<sub>2</sub> = (X<sub>8</sub>X<sub>7</sub>X<sub>6</sub>X<sub>5</sub>1111)<sub>2</sub>
 
 (2) <br/>(X<sub>8</sub>X<sub>7</sub>X<sub>6</sub>X<sub>5</sub>X<sub>4</sub>X<sub>3</sub>X<sub>2</sub>X<sub>1</sub>
 )<sub>2</sub>
-xor (00001111)<sub>2</sub> = ( )<sub>2</sub>
+xor (00001111)<sub>2</sub> = (X<sub>8</sub>X<sub>7</sub>X<sub>6</sub>X<sub>5</sub>X'<sub>4</sub>X'<sub>3</sub>X'<sub>2</sub>X'<sub>1</sub>)<sub>2</sub>
 
 (3)<br/>
  ((X<sub>8</sub>X<sub>7</sub>X<sub>6</sub>X<sub>5</sub>X<sub>4</sub>X<sub>3</sub>X<sub>2</sub>X<sub>1</sub>
@@ -83,4 +84,21 @@ xor (00001111)<sub>2</sub> = ( )<sub>2</sub>
 or (not X<sub>8</sub>X<sub>7</sub>X<sub>6</sub>X<sub>5</sub>X<sub>4</sub>X<sub>3</sub>X<sub>2</sub>X<sub>1</sub>
 )<sub>2</sub>
 and (00001111)<sub>2</sub>
-) = ( )<sub>2</sub>
+) = (X<sub>8</sub>X<sub>7</sub>X<sub>6</sub>X<sub>5</sub>X'<sub>4</sub>X'<sub>3</sub>X'<sub>2</sub>X'<sub>1</sub>)<sub>2</sub>
+
+## Part 3
+
+### 1)Logic gate
+
+In electronics, a logic gate is an idealized or physical device implementing a Boolean function; that is, it performs a logical operation on one or more binary inputs and produces a single binary output. Depending on the context, the term may refer to an ideal logic gate, one that has for instance zero rise time and unlimited fan-out, or it may refer to a non-ideal physical device (see Ideal and real op-amps for comparison).
+
+### 2)Boolean algebra
+
+In mathematics and mathematical logic, Boolean algebra is the branch of algebra in which the values of the variables are the truth values true and false, usually denoted 1 and 0 respectively. Instead of elementary algebra where the values of the variables are numbers, and the prime operations are addition and multiplication, the main operations of Boolean algebra are the conjunction and denoted as ∧, the disjunction or denoted as ∨, and the negation not denoted as ¬. It is thus a formalism for describing logical relations in the same way that elementary algebra describes numeric relations.
+
+自学存储电路。维基百科：“Flip-flop”，选择中文：<br/>
+1)Flip-flop 中文翻译是？  
+触发器
+
+2)How many bits information does a SR latch store?<br/>
+1位
