--- a/hw05.md
+++ b/hw05.md
@@ -10,6 +10,7 @@ AND gate
 |Boolean Expression（布尔表达式）|Logic diagram（逻辑图）|Truth table（真值表）|
 |:----------:|:-----------------:|:---------------------:|
 |$$X = A • B$$|![](images/AND.png)|![](images/andtt.png)
+
 AND:与门相当于串联，“与”是同时的意思，即A和B两个条件同时满足（即都为1）时，才为正确（即输出1），否则为错误（即输出0）。与门是用于实现“乘”运算的电路。
 
 2) Give the three representations of an XOR gate and say in your
@@ -17,9 +18,10 @@ words what XOR means.
 
  XOR gate
 
-|Boolean Expression（布尔表达式）|Logic diagram（逻辑图）|Truth table（真值表）
-|:-----------------:|:--------------------:|:-----------------------
+|Boolean Expression（布尔表达式）|Logic diagram（逻辑图）|Truth table（真值表）|
+|:-----------------:|:--------------------:|:-----------------------:|
 |$$X = A ⊕ B$$|![](images/XOR.png)|![](images/xortt.png)
+
 XOR:异或相当于不进位的二进制加法，又叫半加运算。当A和B相同时（即都为0或都为1）输出 0，当A和B不同时（即为0和1）输出1。
 
 3) Draw a circuit diagram corresponding to the following Boolean
