--- a/hw05.md
+++ b/hw05.md
@@ -24,9 +24,10 @@ words what XOR means.
 
 XOR:异或相当于不进位的二进制加法，又叫半加运算。当A和B相同时（即都为0或都为1）输出 0，当A和B不同时（即为0和1）输出1。
 
-3) Draw a circuit diagram corresponding to the following Boolean
-expression: (A + B)(B + C)
+3) Draw a circuit diagram corresponding to the following Boolean<br/>
+expression: (A + B)(B + C)<br/>
 
+![](images/hw05图2.jpg)
 
 4) Show the behavior of the following circuit with a truth table:<br/>
 ![](images/hw05p1.png)
@@ -67,6 +68,8 @@ Right:
 6) There are eight 1bit full adder integrated circuits. Combine them to 8bit adder
 circuit using the following box diagram.<br/>
 ![](images/hw05p2.png)<br/>
+
+![](images/hw05图1.jpg)
 
 
 7) Logical binary operations can be used to modify bit pattern. Such as
