--- a/hw05.md
+++ b/hw05.md
@@ -24,8 +24,7 @@ words what XOR means.
 
 XOR:异或相当于不进位的二进制加法，又叫半加运算。当A和B相同时（即都为0或都为1）输出 0，当A和B不同时（即为0和1）输出1。
 
-3) Draw a circuit diagram corresponding to the following Boolean<br/>
-expression: (A + B)(B + C)<br/>
+3) Draw a circuit diagram corresponding to the following Boolean expression: (A + B)(B + C)<br/>
 
 ![](images/hw05图2.jpg)
 
