--- a/hw08.md
+++ b/hw08.md
@@ -4,6 +4,12 @@
 
 1）用伪代码描述将十进制转换成16进制的方法<br/>
 
+GET number<br/>
+IF number<0
+	number=-number
+WHILE number!=0
+	hexDigit[i]=number%16
+
 
 
 2）C语言实现（先用注释写好算法，然后翻译）<br/>
@@ -64,8 +70,9 @@ A top-down approach (also known as stepwise design and in some cases used as a s
 2） Work breakdown structure (WBS)<br/>
 A work-breakdown structure (WBS) in project management and systems engineering, is a deliverable-oriented breakdown of a project into smaller components. A work breakdown structure is a key project deliverable that organizes the team's work into manageable sections. The Project Management Body of Knowledge (PMBOK 5) defines the work-breakdown structure "A hierarchical decomposition of the total scope of work to be carried out by the project team to accomplish the project objectives and create the required deliverables."
 
-3）简述管理学 WBS 与 信息学Top-down设计 的异同<br/>
-
+3）简述管理学 WBS 与 信息学Top-down设计的异同<br/>
+同：管理学 WBS 与 信息学Top-down设计都是将复杂的系统分解成更小的子系统方便管理或处理。<br/>
+异：管理学 WBS 是从最终目标开始，按不同的类别进行分解；信息学Top-down设计则是自上而下，从指定的复杂系统开始，分解成连续的几个子系统进行编码。<br/>
 
 ### 3、仔细观察您洗衣机的运作过程，运用Top-down设计方法和Pseudocode 描述洗衣机控制程序。假设洗衣机可执行的基本操作如下：
 
@@ -78,14 +85,72 @@ halt(returncode) //停机，success 成功 failure 失败<br/>
 
 1）请使用伪代码分解“正常洗衣”程序的大步骤。包括注水、浸泡等<br/>
 
+1.打开电源。<br/>
+2.选择洗衣模式，水量。<br/>
+3.注水，打开注水开关，水位计记录水位高度，达到预设高度后关闭注水开关。<br/>
+4.浸泡，计时器计时，达到预设时间后进入下一步。<br/>
+5.洗衣，电机按照程序转动，计数器记录转动次数，达到预设后电机停止转动。<br/>
+6.排水，打开排水开关，水位计记录水位高度，达到预设高度后关闭排水开关。<br/>
+7.脱水，电机按照程序转动，计数器记录转动次数，达到预设后电机停止转动。<br/>
+8.结束,关闭电源。<br/>
+
 2）进一步用基本操作、控制语句（IF、FOR、WHILE等）、变量与表达式，写出每个步骤的伪代码<br/>
 
+	power_switch(on)					//打开电源
+
+		GET pattern1,pattern2,time,heightIn,heightOut		
+		SET h,t,n1,n2 as 0				//选择洗衣模式，水量
+		
+		water_in_switch(open)				//注水
+			get_water_volume(h)
+		IF h==heightIn
+			water_in_switch(close)
+		ENDIF
+		
+		time_counter(t)					//浸泡
+		IF t==time
+			continue
+		ELSE 
+			halt(failure)
+		ENDIF
+
+		WHILE n1<pattern1				//洗衣
+			motor_run(left)
+			motor_run(right)
+			n1 add 1
+		ENDWHILE
+
+		water_out_switch(open)				//排水
+			get_water_volume(h)
+		IF h==heightOut
+			water_out_switch(close)
+		ENDIF
+
+		WHILE n2<pattern2				//脱水
+			motor_run(left)
+			motor_run(right)
+			n2 add 1
+		ENDWHILE
+
+		halt(success)					//结束
+
+	power_switch(close)
+		
+
 3）根据你的实践，请分析“正常洗衣”与“快速洗衣”在用户目标和程序上的异同。你认为是否存在改进（创新）空间，简单说明你的改进意见？<br/>
+
+用户目标：<br/>
+同:都是完成洗衣过程；<br/>
+异：“正常洗衣”模式中用户要求保证洗衣质量；“快速洗衣”模式中用户要求使用更少的时间完成洗衣过程。<br/>
+程序：<br/>
+同：洗衣步骤基本相同；<br/>
+异：“快速洗衣”相较于“正常洗衣”缩短“浸泡”过程的时间，减少“洗衣”过程的次数。<br/>
+
+改进意见:在“快速洗衣”模式的洗衣步骤中提高电机功率，在减少洗衣时间的同时提高洗衣质量。<br/>
 
 4）通过步骤3），提取一些共性功能模块（函数），简化“正常洗衣”程序，使程序变得更利于人类理解和修改维护。<br/>
 例如：<br/>
 wait(time) //等待指定的时间；<br/>
 注水(volume,timeout) //在指定时间内完成注水，否则停机；<br/>
-排水(timeout)。<br/>
-等子程序<br/>
+排水(timeout)。等子程序<br/>
 
