--- a/hw08.md
+++ b/hw08.md
@@ -4,12 +4,33 @@
 
 1）用伪代码描述将十进制转换成16进制的方法<br/>
 
-GET number<br/>
-IF number<0
-	number=-number
-WHILE number!=0
-	hexDigit[i]=number%16
+	GET number
+		decNumber=|number|
 
+	WHILE decNumber is not 0
+		compute the remainder of decNumber divided by 16
+		set hexDigit[i] to the remainder
+		compute decNumber as the integer part of decNumber divided by 16
+	ENDWHILE
+
+	CASE hexDigit[i] OF
+		0: print 0
+		1：print 1
+		2：print 2
+		3：print 3
+		4：print 4
+		5：print 5
+		6：print 6
+		7：print 7
+		8: print 8
+		9：print 9
+		10：print A
+		11：print B
+		12：print C
+		13：print D
+		14：print E
+		15：print F
+	ENDCASE
 
 
 2）C语言实现（先用注释写好算法，然后翻译）<br/>
@@ -99,7 +120,7 @@ halt(returncode) //停机，success 成功 failure 失败<br/>
 	power_switch(on)					//打开电源
 
 		GET pattern1,pattern2,time,heightIn,heightOut		
-		SET h,t,n1,n2 as 0				//选择洗衣模式，水量
+		SET h,t,n1,n2 to 0				//选择洗衣模式，水量
 		
 		water_in_switch(open)				//注水
 			get_water_volume(h)
@@ -154,3 +175,5 @@ wait(time) //等待指定的时间；<br/>
 注水(volume,timeout) //在指定时间内完成注水，否则停机；<br/>
 排水(timeout)。等子程序<br/>
 
+power(high_normal_low) //电机功率，high 高，normal 正常，low 低<br/>
+laundry mode(normal_quick) //洗衣模式，normal 正常，quick 快<br/>
