--- a/hw09.md
+++ b/hw09.md
@@ -5,25 +5,68 @@
 
 #### – 游戏涉及哪些类。请列表说明
 
+|number|class|
+|:-----:|:-----:|
+|1|background|
+|2|sprite|
+|3|bottom|
+|4|text|
+|5|Mouse|
 
 #### – 游戏中有哪些对象，各几个。例如，船（一个）
 
-船（一个）
-牧师（三个）
-恶魔（三个）
-座位（两个）
-岸（两边）
+1.background<br/>
+2.sprite<br/>
+船（一个）<br/>
+牧师（三个）<br/>
+恶魔（三个）<br/>
+座位（两个）<br/>
+岸（两边）<br/>
+计时器（一个）<br/>
+3.bottom<br/>
+play（一个）<br/>
+GO（一个）<br/>
+try again（一个）<br/>
+4.text<br/>
+Well done!（一个）<br/>
+Game over（一个）<br/>
+Failed（一个）<br/>
+Time left<br/>
+5.Mouse<br/>
 
 #### – 类和对象的区别是什么？举一个例子说明
 
+类是由一组相似的对象组成的。类是抽象的，对象是具象的。类包含具有共同性质和行为的对象，而对象具有特定的行为和事件。<br/>
+例如，游戏中sprite类包含了具有相同性质和行为的牧师和魔鬼；而牧师和魔鬼各自具有特定的事件，都是单独的对象。<br/>
+
 #### – 游戏中的魔鬼，有哪些属性和方法？
+
+属性：<br/>
+名字Name<br/>
+动画Animations<br/>
+尺寸Size<br/>
+图片Texture<br/>
+可见性Visibility<br/>
+
+方法：<br/>
+上/下船<br/>
+杀死牧师<br/>
+
 
 #### – 假设魔鬼被鼠标点中，会执行onclick事件，请用文字（伪代码）描述这个事件中魔鬼与其他对象沟通的过程。
 
     onclick(devil)
     {
-        if
+        IF devil is on bank&&boat is near devil&&seat>0
+            devil goes on the boat
+            numberDevilOnBank-=1
+            seat-=1
+        ELSEIF devil is on boat
+            devil goes on the bank
+            numberDevilOnBank+=1
+            seat+=1
+        ENDIF
     }
 
-
 #### – 类或对象会是动词吗？
+不会。
