--- a/hw03.md
+++ b/hw03.md
@@ -63,17 +63,17 @@ x=-0x1f转换为十进制为-31,原码为1001 1111，补码为1110 0001，要将
 证明：设I为一n位的二进制正数，要求扩展到m位，（m>n） d<sub>i</sub>为0或1。<br/>
 对于正数扩展：<br/>
 由位置表示法：<br/>
-$$I=\sum_{i=1}^n d_i*2^i$$<br/>
-$$=0+\sum_{i=1}^n d_i*2^i$$<br/>
-$$=\sum_{i=k+1}^m 0*2^i+\sum_{i=1}^n d_i*2^i$$<br/>
-$$=\sum_{i=k+1}^m 0*2^i+I$$<br/>
+$I=\sum_{i=1}^n d_i*2^i$<br/>
+$=0+\sum_{i=1}^n d_i*2^i$<br/>
+$=\sum_{i=k+1}^m 0*2^i+\sum_{i=1}^n d_i*2^i$<br/>
+$=\sum_{i=k+1}^m 0*2^i+I$<br/>
 可得当I为正数，在左边用0补齐即可。<br/>
 对于负数扩展：<br/>
-$$-I=-\sum_{i=1}^n d_i*2^i$$<br/>
-$$=-(\sum_{i=k+1}^m 0*2^i+\sum_{i=1}^n d_i*2^i)$$<br/>
+$-I=-\sum_{i=1}^n d_i*2^i$<br/>
+$=-(\sum_{i=k+1}^m 0*2^i+\sum_{i=1}^n d_i*2^i)$<br/>
 由于二进制的负数等于其每位求反加1,可得<br/>
-上式$$=\sum_{i=k+1}^m (1-0)*2^i+\sum_{i=1}^n (1-d_i)*2^i+1$$<br/>
-$$=\sum_{i=k+1}^m 1*2^i+(-I)$$<br/>
+上式$=\sum_{i=k+1}^m (1-0)*2^i+\sum_{i=1}^n (1-d_i)*2^i+1$<br/>
+$=\sum_{i=k+1}^m 1*2^i+(-I)$<br/>
 可得当I为负数，在左边用1补齐即可。<br/>
 所以二进制数在扩展位数时，只需在左侧用符号位（即最左位）数字补齐即可。
 
